# Jerk-continuous-online-trajectory-generator-with-constraints

./: README.md
Mathematica/: Trigonometirc_total_four_bump_Math.nb  Trigonometric_total_four_bump_Github.nb  two_equationV05.nb
ROS/description/endo_description/: CMakeLists.txt  package.xml
ROS/description/endo_description/launch/: display.launch  gazebo.launch
ROS/description/endo_description/meshes/collision/: LINK7.STL  SPHERE.STL
ROS/description/endo_description/meshes/visual/: LINK7.dae  SPHERE.dae
ROS/description/endo_description/urdf/: endo.xacro  ur5.urdf.xacro  ur5_with_endo.urdf  ur5_with_endo.xacro
ROS/description/ur_description/launch/: ur3_spawn.launch  ur5_spawn.launch
ROS/description/ur_description/meshes/ur5/visual/: forearm.dae  upperarm.dae
ROS/description/ur_description/urdf/: common.gazebo.xacro  ur.transmission.xacro  ur3.urdf  ur3.urdf.xacro  ur5.urdf.xacro.standing
ROS/gazebo_pose_publisher/: CMakeLists.txt  package.xml
ROS/gazebo_pose_publisher/msg/: custom_pose.msg
ROS/gazebo_pose_publisher/src/: main.cpp
ROS/moveit_servo/: CMakeLists.txt  package.xml
ROS/moveit_servo/config/: ur_simulated_config.yaml
ROS/moveit_servo/include/moveit_servo/: pose_tracking.h  servo_calcs.h
ROS/moveit_servo/launch/: spacenav_cpp.launch  start_servo_server.launch
ROS/moveit_servo/src/: pose_tracking.cpp  servo_calcs.cpp
ROS/moveit_servo/src/cpp_interface_example/: cpp_interface_example.cpp  pose_tracking_example.cpp
ROS/moveit_servo/src/custom/: GazeboModelState.cpp  GazeboModelState.h  Utilities.cpp  Utilities.h
ROS/robot_controller/: CMakeLists.txt  package.xml
ROS/robot_controller/msg/: RotationAngle.msg  ScopeTip.msg
ROS/robot_controller/src/: EndoCameleonPathComputation.cpp  EndoCameleonPathComputation.h  EndoCameleonRobotController.cpp  EndoCameleonRobotController.h  GazeboMarker.cpp  GazeboMarker.h  GazeboModelState.cpp  HandDetection.py  Main.cpp  PathComputation.cpp  PathComputation.h  RobotController.cpp  RobotController.h  RvizMarker.cpp  RvizMarker.h  Semaphore.cpp  Semaphore.h  UR3PathComputation.cpp  UR3PathComputation.h  UR3RobotController.cpp  UR3RobotController.h  Utilities.cpp  Utilities.h
ROS/robot_controller/src/OTG/: TrigonometricAlgorithm.cpp  TrigonometricOTG.cpp  TrigonometricOTG.h  poly34.cpp  poly34.h  profileSegments.cpp  profileSegments.h  profileSegmentsB.cpp  profileSegmentsB.h
ROS/robot_moveit_config/endo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS/robot_moveit_config/endo_moveit_config/config/: endo.srdf  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ROS/robot_moveit_config/endo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  custom.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  endo_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ROS/robot_moveit_config/ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS/robot_moveit_config/ur3_moveit_config/config/: fake_controllers.yaml  joint_names.yaml  ompl_planning.yaml  ros_controllers.yaml  ur3.srdf
ROS/robot_moveit_config/ur3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  custom.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur3_moveit_controller_manager.launch.xml
ROS/robot_moveit_config/ur5_moveit_config/: .setup_assistant  package.xml
ROS/robot_moveit_config/ur5_moveit_config/config/: controllers.yaml  ur5.srdf
ROS/robot_moveit_config/ur5_moveit_config/launch/: custom.launch  custom_planning_execution.launch  demo.launch  demo_gazebo.launch  gazebo.launch  moveit_rviz.launch  planning_context.launch
ROS/script/: kill_simulation.sh  start_rviz.sh  start_servo.sh  start_simulation.sh  start_simulation_endo.sh  start_simulation_ur3.sh
ROS/simulation/endo_gazebo/: CMakeLists.txt  package.xml
ROS/simulation/endo_gazebo/config/: controller_guide.yaml  ros_controllers.yaml  ros_controllers_test.yaml
ROS/simulation/endo_gazebo/launch/: endo_gazebo.launch  endo_gazebo_controller.launch
ROS/simulation/endo_gazebo/materials/scripts/: ribcage.material
ROS/simulation/endo_gazebo/models/: frame.model
ROS/simulation/endo_gazebo/world/: empty.world
ROS/simulation/ur3_gazebo/: CMakeLists.txt  package.xml
ROS/simulation/ur3_gazebo/config/: position_controller.yaml  ros_controllers.yaml  trajectory_controller.yaml
ROS/simulation/ur3_gazebo/launch/: ur3_gazebo.launch  ur3_gazebo_controller.launch
ROS/simulation/ur3_gazebo/meshes/: ToolStick.dae  ribcage.dae
ROS/simulation/ur3_gazebo/world/: empty.world
ROS/usb_cam/launch/: usb_cam_server.launch
