<?xml version="1.0"?>
<package format="2">
  <name>robot_controller</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>


  <maintainer email="surge@hamad.qa">Surge</maintainer>

  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
