<?xml version="1.0"?>
<package format="2">
  <name>endo_description</name>
  <version>0.0.0</version>
  <description>The htr_ur5_description package</description>

  <maintainer email="zhaohaorandl@gmail.com">hzhao9</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
