<?xml version="1.0"?>
<package format="2">
  <name>endo_gazebo</name>
  <version>0.0.0</version>
  <description>The endo_gazebo package</description>

  <maintainer email="surge@hamad.qa">surge</maintainer>

  <license>TODO</license>

  <exec_depend>gazebo_ros</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
 
    <gazebo_ros gazebo_model_path="${prefix}/../endo_gazebo/" />

  </export>
</package>
